--- a/image-share/image_share.html
+++ b/image-share/image_share.html
@@ -12,15 +12,17 @@
 <template name="images">
   <div class="row">
     {{#each i}}
-    <div class="col-xs-12 col-md-3">
+    <div class="col-xs-12 col-md-3" id="{{_id}}">
       <div class="thumbnail">
         <!-- Events are written jquery style inside the template, so js-image is what we want to attach to -->
         <img src="{{img_src}}" class="js-image" alt="{{img_alt}}">
+        <div class="caption">
+          <h3>Thumbnail</h3>
+          <p>Description</p>
+          <button class="js-del-image btn btn-warning">Delete</button>
+        </div>
       </div>
-      <div class="caption">
-        <h3>Thumbnail</h3>
-        <p>Description</p>
-      </div>
+
     </div>
     <!-- /col -->
     {{/each}}
