--- a/image-share/image_share.html
+++ b/image-share/image_share.html
@@ -3,13 +3,45 @@
 </head>
 
 <body>
+  {{> images_add_form}}
   <h1>Welcome to Meteor!</h1>
   <div class="container">
     {{> images}}
   </div>
 </body>
 
+
+
+
+<template name="images_add_form">
+  <div class="modal fade" tabindex="-1" role="dialog" id="images_add_form">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          <form class="js-save">
+            <input type="text" name="img_src" />
+            <br/>
+            <input type="text" name="img_alt" />
+            <button class="btn btn-success">Save</button>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+</template>
+
 <template name="images">
+  <button class="js-new-image btn btn-success">New</button>
   <div class="row">
     {{#each i}}
     <div class="col-xs-12 col-md-3" id="{{_id}}">
@@ -17,14 +49,15 @@
         <!-- Events are written jquery style inside the template, so js-image is what we want to attach to -->
         <img src="{{img_src}}" class="js-image" alt="{{img_alt}}">
         <div class="caption">
-          <h3>Thumbnail</h3>
-          <p>Description</p>
+          <h3>Rating: {{rating}}</h3>
+          <p>{{img_alt}}</p>
+          <p>{{> starsRating class="js-rate-image" rating=rating data-id=_id mutable=true}}</p>
           <button class="js-del-image btn btn-warning">Delete</button>
         </div>
       </div>
-
     </div>
     <!-- /col -->
     {{/each}}
   </div>
+  <!-- /row -->
 </template>
