--- a/image-share/image_share.html
+++ b/image-share/image_share.html
@@ -4,14 +4,17 @@
 
 <body>
   {{> images_add_form}}
-  <h1>Welcome to Meteor!</h1>
+
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      {{> loginButtons}}
+    </div>
+  </nav>
+
   <div class="container">
-    {{> images}}
+    <h1>Welcome to Meteor! {{username}}</h1> {{> images}}
   </div>
 </body>
-
-
-
 
 <template name="images_add_form">
   <div class="modal fade" tabindex="-1" role="dialog" id="images_add_form">
@@ -41,13 +44,15 @@
 </template>
 
 <template name="images">
+  {{#if currentUser}}
   <button class="js-new-image btn btn-success">New</button>
+  {{/if}}
   <div class="row">
     {{#each i}}
     <div class="col-xs-12 col-md-3" id="{{_id}}">
       <div class="thumbnail">
         <!-- Events are written jquery style inside the template, so js-image is what we want to attach to -->
-        <img src="{{img_src}}" class="js-image" alt="{{img_alt}}">
+        <img src="{{img_src}}" class="js-image thumbnail-image" alt="{{img_alt}}">
         <div class="caption">
           <h3>Rating: {{rating}}</h3>
           <p>{{img_alt}}</p>
