--- a/image-share/image_share.html
+++ b/image-share/image_share.html
@@ -46,7 +46,10 @@
 <template name="images">
   {{#if currentUser}}
   <button class="js-new-image btn btn-success">New</button>
-  {{/if}}
+  {{/if}} {{#if (filtering_images)}}
+    <h2>
+      Showing images from user {{getFilterUsername }} <a href="#" class="js-unset-image-filter">Show all images</a>
+    </h2> {{/if}}
   <div class="row">
     {{#each i}}
     <div class="col-xs-12 col-md-3" id="{{_id}}">
@@ -57,7 +60,7 @@
           <h3>Rating: {{rating}}</h3>
           <p>{{img_alt}}</p>
           <p>{{> starsRating class="js-rate-image" rating=rating data-id=_id mutable=true}}</p>
-          <p>user: {{getUsername(createdBy)}}</p>
+          <p>user: <a href="#" class="js-set-image-filter">{{getUsername createdBy}}</a></p>
           <button class="js-del-image btn btn-warning">Delete</button>
         </div>
       </div>
