--- a/image-share/client/image_share.html
+++ b/image-share/client/image_share.html
@@ -3,18 +3,39 @@
 </head>
 
 <body>
-  {{> images_add_form}}
 
+  
+
+</body>
+
+<template name="ApplicationLayout">
+    {{> yield "navbar"}}
+    {{> yield "main"}}
+</template>
+  
+<template name="navbar">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       {{> loginButtons}}
     </div>
   </nav>
+</template>
 
+<template name="welcome">
   <div class="container">
-    <h1>Welcome to Meteor! {{username}}</h1> {{> images}}
+    <div class="jumbotron">
+      <h1>Welcome to Meteor! {{username}}</h1>
+      <a href="/images" class="btn btn-info">ENTER</a>
+    </div>
   </div>
-</body>
+</template>
+
+<template name="image">
+  <div class="container">
+  <h2>{{img_alt}}</h2>
+  <a href="/images"><img class="single-img" src="{{img_src}}" /></a>
+  </div>
+</template>
 
 <template name="images_add_form">
   <div class="modal fade" tabindex="-1" role="dialog" id="images_add_form">
@@ -44,29 +65,31 @@
 </template>
 
 <template name="images">
-  {{#if currentUser}}
-  <button class="js-new-image btn btn-success">New</button>
-  {{/if}} {{#if (filtering_images)}}
+  <div class="container js-container">
+    {{#if currentUser}}
+    <button class="js-new-image btn btn-success">New</button>
+    {{/if}} {{#if (filtering_images)}}
     <h2>
       Showing images from user {{getFilterUsername }} <a href="#" class="js-unset-image-filter">Show all images</a>
     </h2> {{/if}}
-  <div class="row">
-    {{#each i}}
-    <div class="col-xs-12 col-md-3" id="{{_id}}">
-      <div class="thumbnail">
-        <!-- Events are written jquery style inside the template, so js-image is what we want to attach to -->
-        <img src="{{img_src}}" class="js-image thumbnail-image" alt="{{img_alt}}">
-        <div class="caption">
-          <h3>Rating: {{rating}}</h3>
-          <p>{{img_alt}}</p>
-          <p>{{> starsRating class="js-rate-image" rating=rating data-id=_id mutable=true}}</p>
-          <p>user: <a href="#" class="js-set-image-filter">{{getUsername createdBy}}</a></p>
-          <button class="js-del-image btn btn-warning">Delete</button>
+    <div class="row">
+      {{#each i}}
+      <div class="col-xs-12 col-md-3" id="{{_id}}">
+        <div class="thumbnail">
+          <!-- Events are written jquery style inside the template, so js-image is what we want to attach to -->
+          <a href="/image/{{_id}}"><img src="{{img_src}}" class="js-image thumbnail-image" alt="{{img_alt}}"></a>
+          <div class="caption">
+            <h3>Rating: {{rating}}</h3>
+            <p>{{img_alt}}</p>
+            <p>{{> starsRating class="js-rate-image" rating=rating data-id=_id mutable=true}}</p>
+            <p>user: <a href="#" class="js-set-image-filter">{{getUsername createdBy}}</a></p>
+            <button class="js-del-image btn btn-warning">Delete</button>
+          </div>
         </div>
       </div>
+      <!-- /col -->
+      {{/each}}
     </div>
-    <!-- /col -->
-    {{/each}}
+    <!-- /row -->
   </div>
-  <!-- /row -->
 </template>
