--- a/Coursera/ResponsiveWebsite/IntroMeteorDev/siteace/client/siteace.html
+++ b/Coursera/ResponsiveWebsite/IntroMeteorDev/siteace/client/siteace.html
@@ -1,72 +1,95 @@
 <head>
-  <title>siteace</title>
+    <title>siteace</title>
 </head>
 
 <body>
-	<!-- navbar  - you will be putting the login functions here -->
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">
-	        Site Ace
-	      </a>
-	    </div>
-	  </div>
-	</nav>
+    
 
-	<div class="container">
-		{{> website_form}}
-		{{> website_list}}
-	</div>
 </body>
 
+<template name="ApplicationLayout">
+    {{> yield "navbar"}}
+    {{> yield "main"}}
+</template>
+
+<template name="navbar">
+    <!-- navbar  - you will be putting the login functions here -->
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    Site Ace
+                </a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>{{> loginButtons align="right"}}</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</template>
 
 <template name="website_form">
-	<a class="btn btn-default js-toggle-website-form" href="#">
-  		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-	</a>
-	<div id="website_form" class="hidden_div">
-		<form class="js-save-website-form">
-		  <div class="form-group">
-		    <label for="url">Site address</label>
-		    <input type="text" class="form-control" id="url" placeholder="http://www.mysite.com">
-		  </div>
-		  <div class="form-group">
-		    <label for="title">Title</label>
-		    <input type="text" class="form-control" id="title" placeholder="Mysite">
-		  </div>
-		    <div class="form-group">
-		    <label for="description">Description</label>
-		    <input type="text" class="form-control" id="description" placeholder="I found this site really useful for ...">
-		  </div>
+    <a class="btn btn-default js-toggle-website-form" href="#">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+    </a>
+    <div id="website_form" class="hidden_div">
+        <form class="js-save-website-form">
+            <div class="form-group">
+                <label for="url">Site address</label>
+                <input type="text" class="form-control" id="url" placeholder="http://www.mysite.com">
+            </div>
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" class="form-control" id="title" placeholder="Mysite">
+            </div>
+            <div class="form-group">
+                <label for="description">Description</label>
+                <input type="text" class="form-control" id="description" placeholder="I found this site really useful for ...">
+            </div>
 
-		  <button type="submit" class="btn btn-default">Submit</button>
-		</form>
-	</div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+    </div>
 </template>
 
 <!-- template that displays several website items -->
 <template name="website_list">
-	<ol>
-	{{#each websites}}
-	{{>website_item}}
-	{{/each}}
-	</ol>
+    <div class="container">
+        {{#if currentUser}}
+            {{> website_form}}
+        {{/if}}
+        <ol>
+            {{#each websites}} {{>website_item}} {{/each}}
+        </ol>
+    </div>
 </template>
 
 <!-- template that displays individual website entries -->
 <template name="website_item">
-<li>
-	<a href="{{url}}">{{title}}</a>
-	<p>
-		{{description}}
-	</p>
-	<a href="#" class="btn btn-default js-upvote">
-		<span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
-	</a>
-	<a href="#" class="btn btn-default js-downvote">
-		<span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
-	</a>
-	<!-- you will be putting your up and down vote buttons in here! -->
-</li>
+    <li>
+        <a href="{{url}}">{{title}}</a>
+        <p>
+            {{description}}
+        </p>
+        <p>created On: {{createdOn}}</p>
+        <p>created By: {{getUsername createdBy}}</p>
+        <span class="up-votes">{{upVotes}}</span>
+        <a href="#" class="btn btn-default js-upvote">
+            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+        </a>
+        <span class="total-votes">{{totalVotes}}</span>
+        <a href="#" class="btn btn-default js-downvote">
+            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+        </a>
+        <span class="down-votes">{{downVotes}}</span>
+        <!-- you will be putting your up and down vote buttons in here! -->
+    </li>
 </template>
