--- a/Coursera/ResponsiveWebsite/IntroMeteorDev/siteace/client/siteace.html
+++ b/Coursera/ResponsiveWebsite/IntroMeteorDev/siteace/client/siteace.html
@@ -72,10 +72,20 @@
     </div>
 </template>
 
+<!-- template that displays several website items -->
+<template name="website_details">
+    <div class="container">
+        <ol>
+            {{#each websites}} {{>website_item}} {{/each}}
+        </ol>
+    </div>
+</template>
+
 <!-- template that displays individual website entries -->
 <template name="website_item">
     <li>
-        <a href="{{url}}">{{title}}</a>
+        <a href="{{url}}">{{title}}</a><br/>
+        <a href="/details/{{_id}}">More details!</a>
         <p>
             {{description}}
         </p>
