--- a/Coursera/ResponsiveWebsite/ResponsiveWebBasics/FinalExam/index.html
+++ b/Coursera/ResponsiveWebsite/ResponsiveWebBasics/FinalExam/index.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>
-    <title>Biking World</title>
-    
+    <title>Trekking World</title>
+
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -14,10 +15,125 @@
 </head>
 
 <body>
+    <!-- navbar -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-menu" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Trekkit</a>
+            </div>
+            <div class="collapse navbar-collapse" id="main-menu">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Locations</a></li>
+                    <li><a href="#">Geocaching</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
+    <!-- Section 1 -->
+    <section id="intro" data-speed="6" data-type="background">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="images/trek1.jpg" alt="">
+                </div>
+                <div class="col-md-8">
+                    <img src="images/trek2.jpg" alt="">
+                </div>
+            </div>
+            <div class="jumbotron">
+                <h1>This page is about trekking</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                    anim id est laborum.</p>
+            </div>
+        </div>
+    </section>
+    <!-- Section 2 -->
+    <section id="home" data-speed="4" data-type="background">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col">
+                    <div class="well">
+                        <h2>Heading</h2>
+                        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
+                            vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
+                            cursus magna, vel scelerisque cursus nisl consectetur et.</p>
+                        <p>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Click me</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col">
+                    <div class="well">
+                        <h2>Heading</h2>
+                        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
+                            vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
+                            cursus magna, vel scelerisque cursus nisl consectetur et.</p>
+                        <p>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Click me</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col">
+                    <div class="well">
+                        <h2>Heading</h2>
+                        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
+                            vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
+                            cursus magna, vel scelerisque cursus nisl consectetur et.</p>
+                        <p>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Click me</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section 3 -->
+    <section id="about" data-speed="2" data-type="background">
+        <div class="container">
+            <div class="jumbotron">
+                <h1>This page is about trekking</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                    anim id est laborum.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                    <p>I was clicked </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
